package cl.icel.pasteleria;

public class Ingrediente {
}
